--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "src": ["程序员", "技术宅", "渗透", "IT", "极客", "人工智能", "红客", "python", "php", "wordpress", "bug", "chrome", "firefox", "java", "javascript"],
+    "src": ["程序员", "技术宅", "渗透", "IT", "人工智能", "红客", "python", "php", "wordpress", "bug", "chrome", "firefox", "java", "javascript"],
     "users": "users.txt",
     "wait_sec": 60,
     "tid": "6149642769",
